<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="42dp"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/shadow"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center_vertical"
                    android:text="@string/local"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/proflie"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="358dp"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:checked="true"
            android:gravity="center_vertical"
            android:showText="false"
            android:stateListAnimator="@null"
            android:switchMinWidth="0dp"
            android:text="@string/push"
            android:textOff=""
            android:textOn=""
            android:textSize="18sp"
            android:thumb="@drawable/switch_thumb"
            android:thumbTextPadding="15dp"
            android:track="@drawable/switch_track_selector" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/updata"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/tag"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/service"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/open"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/user"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:drawableEnd="@drawable/button"
            android:gravity="center_vertical"
            android:stateListAnimator="@null"
            android:text="@string/office"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                android:layout_width="36dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:stateListAnimator="@null"
                android:text="@string/version"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vs"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>